@@ -98,3 +98,5 @@ int caml_set_signal_action(int signo, int action)
   else
     return 0;
 }
+
+void caml_setup_stack_overflow_detection(void) {}
