@@ -34,12 +34,6 @@
 #include "caml/memprof.h"
 #include "caml/finalise.h"
 
-
-#ifdef HAS_STACK_OVERFLOW_DETECTION
-#include <sys/time.h>
-#include <sys/resource.h>
-#endif
-
 #ifndef NSIG
 #define NSIG 64
 #endif
@@ -193,18 +187,15 @@ DECLARE_SIGNAL_HANDLER(trap_handler)
 /* Machine- and OS-dependent handling of stack overflow */
 
 #ifdef HAS_STACK_OVERFLOW_DETECTION
+#ifndef CONTEXT_SP
+#error "CONTEXT_SP is required if HAS_STACK_OVERFLOW_DETECTION is defined"
+#endif
 
-static char * system_stack_top;
 static char sig_alt_stack[SIGSTKSZ];
 
-#if defined(SYS_linux)
-/* PR#4746: recent Linux kernels with support for stack randomization
-   silently add 2 Mb of stack space on top of RLIMIT_STACK.
-   2 Mb = 0x200000, to which we add 8 kB (=0x2000) for overshoot. */
-#define EXTRA_STACK 0x202000
-#else
-#define EXTRA_STACK 0x2000
-#endif
+/* Code compiled with ocamlopt never accesses more than
+   EXTRA_STACK bytes below the stack pointer. */
+#define EXTRA_STACK 256
 
 #ifdef RETURN_AFTER_STACK_OVERFLOW
 extern void caml_stack_overflow(caml_domain_state*);
@@ -212,19 +203,17 @@ extern void caml_stack_overflow(caml_domain_state*);
 
 DECLARE_SIGNAL_HANDLER(segv_handler)
 {
-  struct rlimit limit;
   struct sigaction act;
   char * fault_addr;
 
   /* Sanity checks:
      - faulting address is word-aligned
-     - faulting address is within the stack
+     - faulting address is on the stack, or within EXTRA_STACK of it
      - we are in OCaml code */
   fault_addr = CONTEXT_FAULTING_ADDRESS;
   if (((uintnat) fault_addr & (sizeof(intnat) - 1)) == 0
-      && getrlimit(RLIMIT_STACK, &limit) == 0
-      && fault_addr < system_stack_top
-      && fault_addr >= system_stack_top - limit.rlim_cur - EXTRA_STACK
+      && fault_addr < Caml_state->top_of_stack
+      && (uintnat)fault_addr >= CONTEXT_SP - EXTRA_STACK
 #ifdef CONTEXT_PC
       && Is_in_code_area(CONTEXT_PC)
 #endif
@@ -284,7 +273,6 @@ void caml_init_signals(void)
   }
 #endif
 
-  /* Stack overflow handling */
 #ifdef HAS_STACK_OVERFLOW_DETECTION
   {
     stack_t stk;
@@ -295,8 +283,19 @@ void caml_init_signals(void)
     SET_SIGACT(act, segv_handler);
     act.sa_flags |= SA_ONSTACK | SA_NODEFER;
     sigemptyset(&act.sa_mask);
-    system_stack_top = (char *) &act;
     if (sigaltstack(&stk, NULL) == 0) { sigaction(SIGSEGV, &act, NULL); }
   }
+#endif
+}
+
+void caml_setup_stack_overflow_detection(void)
+{
+#ifdef HAS_STACK_OVERFLOW_DETECTION
+  stack_t stk;
+  stk.ss_sp = malloc(SIGSTKSZ);
+  stk.ss_size = SIGSTKSZ;
+  stk.ss_flags = 0;
+  if (stk.ss_sp)
+    sigaltstack(&stk, NULL);
 #endif
 }
